# Seat-Sense

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt
app/: .env.example  alembic.ini  config.py  main.py
app/alembic/: env.py
app/alembic/versions/: 5dd0f3625445_add_face_verified_column_to_users.py  7a75bc628588_added_face_embeddings.py  b5b9dde49afc_init.py  cdc697acb497_fk_constraints_changes.py  d7fca6a4dce3_add_pgvector_index_on_embedding.py  e291f22949de_event_cascade_rule.py  faabf5f10ff1_init.py
app/core/: image_processing.py  location_manager.py  seat_labels.py  token_manager.py
app/db/: __init__.py  otp_database.sqlite
app/models/: __init__.py
app/routers/: attendance.py  auth.py  event.py  websocket.py
app/schema/: attendance.py  auth.py  event.py
app/services/: occupancy_detection.py  resend_mail.py
app/static/: seat_labels.json
app/templates/: verification_otp.html
